c/src/test/resources/c/mini_bnc/invalid/ex10Simp.ctrl
<controlFile>
  <sourceFile name="ex10Simp.c" id="1" />
  <run>
    <startPosition fileId="1" line="9" />
    <wayPoint fileId="1" line="12">
      <function funcName="f1" >
        <startPosition fileId="1" line="15" />
        <wayPoint fileId="1" line="21" >
          <loop iterTimes="1" >
            <wayPoint fileId="1" line="22" >
              <command>
                <cascadeFunction> cascade_check </cascadeFunction>
                <argument><![CDATA[
                  valid(&addr->dat[i - 1])
                ]]>
                </argument>
              </command>
            </wayPoint>
          </loop>
        </wayPoint>
        <endPosition fileId="1" line="28" />
      </function>
    </wayPoint>
    <endPosition fileId="1" line="13" />
  </run>
</controlFile>